# logos-module-tictactoe

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  flake.nix  metadata.json
.claude/: settings.local.json
.github/workflows/: build.yml
lib/: libtictactoe.h
releases/: logos-tictactoe-module-lib.lgx  logos-tictactoe_ui-module-lib.lgx
src/: tictactoe_interface.h  tictactoe_plugin.cpp
tasks/: plan.md  todo.md
tictactoe/: .gitignore  CMakeLists.txt  flake.nix  metadata.json
tictactoe-ui/: CMakeLists.txt  flake.nix  metadata.json
tictactoe-ui-cpp/: CMakeLists.txt  flake.nix  metadata.json
tictactoe-ui-cpp/src/: tictactoe_backend.cpp  tictactoe_backend.h  tictactoe_ui_interface.h  tictactoe_ui_plugin.cpp  tictactoe_ui_plugin.h
tictactoe-ui-qml/: .gitignore  Main.qml  flake.nix  metadata.json
tictactoe-ui/src/: tictactoe_backend.cpp  tictactoe_backend.h  tictactoe_ui_plugin.cpp  tictactoe_ui_plugin.h
tictactoe/lib/: libtictactoe.c  libtictactoe.h
tictactoe/src/: tictactoe_interface.h  tictactoe_plugin.cpp  tictactoe_plugin.h
tictactoe/tests/: CMakeLists.txt  README.md  test_libtictactoe.c  test_proto_roundtrip.cpp
